<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityBike</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="Perfil">Perfil</string>
    <string name="Circuitos">Circuitos</string>
    <string name="Configuracion">Configuracion</string>
    <string name="Rutas">Rutas</string>
    <string name="Contactos">Contactos</string>
    <string name="Comprar">Comprar</string>
    <string name="Estaciones">Estaciones</string>
    <string name="Facebook">Facebook</string>
    <string name="Talleres">Talleres</string>
<string name="drawer_open">Menú Abierto</string>
<string name="drawer_close">Menú Cerrado</string>
</resources>
